# av-projectm-gst-plugin

./: .gitignore  Cargo.toml
examples/: gtksink.rs
scripts/: inspect.sh  test.sh
src/: lib.rs
src/projectm/: imp.rs  mod.rs
